--- a/app/src/main/res/layout/activity_expense__category__list.xml
+++ b/app/src/main/res/layout/activity_expense__category__list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".expenses.Expense_Category_List">
+    tools:context=".expenses.expenseCategoryList">
 
 
 
