#1 WIP logout btn
-GSR

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -27,6 +27,7 @@
         >
 
         <ImageButton
+            android:id="@+id/signOutButton"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_alignParentLeft="true"
